--- a/styles/sass/_variable.scss
+++ b/styles/sass/_variable.scss
@@ -1,6 +1,7 @@
 $primary: #0C1423;
 $secondary: #0F614E;
 $shadow: #86E0F9;
+$fontColor: #fff;
 
 $baseFont: 'Barlow', sans-serif;
 $bodyFont: 'Lato', sans-serif;
