--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,4 @@
-@import "_setup";
+@import "setup";
 @import "variable";
 @import "header";
 
@@ -22,6 +22,8 @@ ul {
 
 a {
     text-decoration: none;
+    color: $fontColor;
+    text-transform: uppercase;
 }
 
 img {
@@ -31,7 +33,7 @@ img {
 
 .wrapper {
     max-width: 1200px;
-    width: 85%;
+    width: 90%;
     margin: 0 auto;
 }
 
