--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -40,7 +40,7 @@ h1 {
 
 .header-content {
     display: flex;
-    height: 100%;
+    height: 90%;
     flex-direction: column;
 }
 
@@ -50,6 +50,17 @@ h1 {
     justify-content: flex-start;
     align-items: center;
 }
+
+// .home-box-image img {
+//     width: 450px;
+//     height: 420px;
+// }
+
+// .home-box-image {
+//     position: absolute;
+//     top: 140px;
+//     right: 0;
+// }
 
 
 
