--- a/styles/style.css
+++ b/styles/style.css
@@ -319,7 +319,7 @@ h1 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 100%;
+  height: 90%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -341,6 +341,10 @@ h1 {
 
 html {
   font-size: 62.5%;
+}
+
+body {
+  font-family: "Lato", sans-serif;
 }
 
 body,
@@ -371,4 +375,53 @@ img {
   max-width: 1200px;
   width: 90%;
   margin: 0 auto;
+}
+
+h1,
+h2 {
+  color: #fff;
+  font-family: "Barlow", sans-serif;
+  text-transform: uppercase;
+}
+
+.about {
+  background-color: #0C1423;
+}
+
+.home-box-image img {
+  width: 450px;
+  height: 400px;
+}
+
+.home-box-image {
+  position: absolute;
+  top: 140px;
+  right: 0;
+}
+
+button {
+  padding: 6px 14px;
+  border: none;
+  background: #86E0F9;
+}
+
+.about-details {
+  text-align: center;
+  padding: 120px 100px;
+}
+
+.about-details a {
+  color: #0C1423;
+}
+
+.about-details p {
+  padding: 10px 0;
+  text-align: justify;
+  line-height: 14px;
+  color: #fff;
+}
+
+h2 {
+  font-size: 2rem;
+  letter-spacing: 1px;
 }
