--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,9 @@
+
+
 @import "setup";
 @import "variable";
 @import "header";
+
 
 html {
   font-size: 62.5%;
@@ -15,6 +18,7 @@ h1,
 h2,
 h3,
 h4,
+h5,
 p {
   margin: 0;
   padding: 0;
@@ -52,7 +56,8 @@ p {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5 {
   color: $fontColor;
   font-family: $baseFont;
   text-transform: uppercase;
@@ -67,13 +72,13 @@ h4 {
 }
 
 .home-box-image img {
-  width: 650px;
-  height: 400px;
+  width: 700px;
+  height: 490px;
 }
 
 .home-box-image {
   position: absolute;
-  top: 140px;
+  top: 125px;
   right: 0;
 }
 
@@ -95,7 +100,7 @@ button:focus {
 
 .about-details {
   text-align: center;
-  padding: 120px 100px;
+  padding: 160px 100px;
 }
 
 .about-details a {
@@ -120,51 +125,47 @@ h3 {
     background-color: $secondary;
 }
 
-// .clown-fish-img img {
-//     width: 520px;
-// }
-
-.new-addition-calc {
-    width: calc(100% / 2);
-}
-
-.new-addition-img {
-    // width: 45%;
-    margin-right: 150px;
-}
-
-.fish-details-box {
-    // width: 45%;
-    // margin-left: 50px;
-    padding: 40px 0px;
-    // margin: 40px 0;
-    padding-left: 60px;
-    margin-right: 80px;
-}
-
-.clown-fish-img {
-    // margin-left: 190px;
-    margin-left: 100px;
-}
-
-.clown-fish-details {
-    padding: 68px 0px;
-    padding-right: 100px;
-    // padding-left: 50px;
-    // margin-right: 60px;
-    margin-left: 80px;
-    // margin-right: 160px;
-    text-align: right;
-}
-
-.new-addition button {
-    background: $primary;
+.new-addition img {
+    height: 340px;
 }
 
 .fish-box-1,
 .fish-box-2 {
     display: flex;
     flex-flow: row nowrap;
+}
+
+.fish-box-1 {
+    margin-bottom: 40px;
+}
+
+.new-addition-calc {
+    width: calc(100% / 2);
+}
+
+.new-addition-img {
+    margin-right: 110px;
+}
+
+.fish-details-box {
+    padding: 40px 0px;
+    padding-left: 60px;
+    margin-right: 80px;
+}
+
+.clown-fish-img {
+    margin-left: 50px;
+}
+
+.clown-fish-details {
+    padding: 45px 0px;
+    padding-right: 100px;
+    margin-left: 80px;
+    text-align: right;
+}
+
+.new-addition button {
+    background: $primary;
 }
 
 .fish-box-1 p {
@@ -174,19 +175,6 @@ h3 {
 .fish-box-2 p {
     text-align: right;
 }
-
-
-// .fish-box-1 .fish-box-details {
-//     padding: 45px 0;
-//     margin-right: 80px;
-//     margin-left: 170px;
-// }
-
-// .fish-box-2 .fish-box-details {
-//     padding: 40px 0;
-//     margin-left: 80px;
-//     margin-right: 170px;
-// }
 
 .new-addition button {
     border: 1px solid $primary;
@@ -201,23 +189,19 @@ h3 {
 
 .new-addition button:hover a,
 .new-addition button:focus a {
-    color: $shadow;  
+    color: rgb(255, 254, 220); 
 }
 
 .fish-box-1 img {
     box-shadow: 35px 35px $shadow;
-    // margin-right: 20px;
     position: relative;
-    top: -35px;
-    
+    top: -35px; 
 }
 
 .fish-box-2 img {
     box-shadow: -35px 35px $shadow;
-    // margin-left: 20px;
     position: relative;
-    bottom: -35px;
-    
+    bottom: -35px; 
 }
 
 
@@ -225,6 +209,11 @@ h3 {
 
 
 // Section: contact
+
+h4 {
+    font-size: 2.6rem;
+    letter-spacing: 1px;
+}
 
 .contact {
     background-color: $primary;
@@ -247,10 +236,10 @@ h3 {
     margin-bottom: 40px;
 }
 
-.location h3::before,
-.community h3::before,
-.blog h3::before,
-.get-in-touch h3::before {
+.location h4::before,
+.community h4::before,
+.blog h4::before,
+.get-in-touch h4::before {
     font-family: "Font Awesome 5 Free";
     display: inline-block;
     border-radius: 50%;
@@ -263,20 +252,20 @@ h3 {
 }
 
 
-.location h3::before {
+.location h4::before {
     content: "\f124";
 }
 
-.community h3::before {
+.community h4::before {
     content: '\f0c0';
 }
 
-.blog h3::before {
+.blog h4::before {
     content: '\f15b';
     padding: 8px 11px;
 }
 
-.get-in-touch h3::before {
+.get-in-touch h4::before {
     content: '\f095'
 }
 
@@ -284,11 +273,16 @@ h3 {
     padding-left: 55px;
 }
 
+h4:hover,
+h4:focus {
+    box-shadow: 2px 2px 4px 1px $shadow;
+}
+
 // -----------------------------------
 
 // Section: month-profile
 
-h4 {
+h5 {
   font-size: 3rem;
   letter-spacing: 1px;
 }
@@ -310,11 +304,11 @@ h4 {
 .month-profile-flex img {
     width: 250px;
     box-shadow: 30px 30px $shadow;
-    margin-right: 90px;
+    margin-right: 70px;
 }
 
 .month-profile-flex p {
-    padding: 15px 0 35px;
+    padding: 15px 0 25px;
 }
 
 // ------------------------------
@@ -347,3 +341,7 @@ footer p {
 }
 
 // --------------------------------
+
+// Importing media
+
+@import "media-query";
