--- a/styles/style.css
+++ b/styles/style.css
@@ -283,7 +283,7 @@ header {
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
-  height: 70vh;
+  height: 80vh;
 }
 
 .home-ul {
@@ -300,7 +300,7 @@ header {
 }
 
 .home-ul li {
-  padding: 15px 15px 0;
+  padding: 15px 25px 0;
   font-size: 1.2rem;
   letter-spacing: 1px;
 }
@@ -312,10 +312,10 @@ header {
 
 h1 {
   color: #fff;
-  font-size: 6.8rem;
+  font-size: 8rem;
   font-family: "Barlow", sans-serif;
   text-transform: uppercase;
-  line-height: 65px;
+  line-height: 75px;
 }
 
 .header-content {
@@ -355,6 +355,7 @@ h1,
 h2,
 h3,
 h4,
+h5,
 p {
   margin: 0;
   padding: 0;
@@ -392,7 +393,8 @@ p {
 h1,
 h2,
 h3,
-h4 {
+h4,
+h5 {
   color: #fff;
   font-family: "Barlow", sans-serif;
   text-transform: uppercase;
@@ -403,13 +405,13 @@ h4 {
 }
 
 .home-box-image img {
-  width: 650px;
-  height: 400px;
+  width: 700px;
+  height: 490px;
 }
 
 .home-box-image {
   position: absolute;
-  top: 140px;
+  top: 125px;
   right: 0;
 }
 
@@ -431,7 +433,7 @@ button:focus {
 
 .about-details {
   text-align: center;
-  padding: 120px 100px;
+  padding: 160px 100px;
 }
 
 .about-details a {
@@ -452,33 +454,8 @@ h3 {
   background-color: #0F614E;
 }
 
-.new-addition-calc {
-  width: calc(100% / 2);
-}
-
-.new-addition-img {
-  margin-right: 150px;
-}
-
-.fish-details-box {
-  padding: 40px 0px;
-  padding-left: 60px;
-  margin-right: 80px;
-}
-
-.clown-fish-img {
-  margin-left: 100px;
-}
-
-.clown-fish-details {
-  padding: 68px 0px;
-  padding-right: 100px;
-  margin-left: 80px;
-  text-align: right;
-}
-
-.new-addition button {
-  background: #0C1423;
+.new-addition img {
+  height: 340px;
 }
 
 .fish-box-1,
@@ -490,6 +467,39 @@ h3 {
   -webkit-box-direction: normal;
       -ms-flex-flow: row nowrap;
           flex-flow: row nowrap;
+}
+
+.fish-box-1 {
+  margin-bottom: 40px;
+}
+
+.new-addition-calc {
+  width: calc(100% / 2);
+}
+
+.new-addition-img {
+  margin-right: 110px;
+}
+
+.fish-details-box {
+  padding: 40px 0px;
+  padding-left: 60px;
+  margin-right: 80px;
+}
+
+.clown-fish-img {
+  margin-left: 50px;
+}
+
+.clown-fish-details {
+  padding: 45px 0px;
+  padding-right: 100px;
+  margin-left: 80px;
+  text-align: right;
+}
+
+.new-addition button {
+  background: #0C1423;
 }
 
 .fish-box-1 p {
@@ -513,7 +523,7 @@ h3 {
 
 .new-addition button:hover a,
 .new-addition button:focus a {
-  color: #86E0F9;
+  color: #fffedc;
 }
 
 .fish-box-1 img {
@@ -528,6 +538,11 @@ h3 {
           box-shadow: -35px 35px #86E0F9;
   position: relative;
   bottom: -35px;
+}
+
+h4 {
+  font-size: 2.6rem;
+  letter-spacing: 1px;
 }
 
 .contact {
@@ -553,10 +568,10 @@ h3 {
   margin-bottom: 40px;
 }
 
-.location h3::before,
-.community h3::before,
-.blog h3::before,
-.get-in-touch h3::before {
+.location h4::before,
+.community h4::before,
+.blog h4::before,
+.get-in-touch h4::before {
   font-family: "Font Awesome 5 Free";
   display: inline-block;
   border-radius: 50%;
@@ -568,20 +583,20 @@ h3 {
   margin-right: 12px;
 }
 
-.location h3::before {
+.location h4::before {
   content: "";
 }
 
-.community h3::before {
+.community h4::before {
   content: "";
 }
 
-.blog h3::before {
+.blog h4::before {
   content: "";
   padding: 8px 11px;
 }
 
-.get-in-touch h3::before {
+.get-in-touch h4::before {
   content: "";
 }
 
@@ -589,7 +604,13 @@ h3 {
   padding-left: 55px;
 }
 
-h4 {
+h4:hover,
+h4:focus {
+  -webkit-box-shadow: 2px 2px 4px 1px #86E0F9;
+          box-shadow: 2px 2px 4px 1px #86E0F9;
+}
+
+h5 {
   font-size: 3rem;
   letter-spacing: 1px;
 }
@@ -613,11 +634,11 @@ h4 {
   width: 250px;
   -webkit-box-shadow: 30px 30px #86E0F9;
           box-shadow: 30px 30px #86E0F9;
-  margin-right: 90px;
+  margin-right: 70px;
 }
 
 .month-profile-flex p {
-  padding: 15px 0 35px;
+  padding: 15px 0 25px;
 }
 
 .gallery {
@@ -642,4 +663,400 @@ footer p {
   color: #0C1423;
   text-align: center;
   padding: 10px;
+}
+
+@media (max-width: 955px) {
+  .home-box-image img {
+    width: 550px;
+  }
+
+  .home-ul li {
+    padding: 15px 18px 0;
+  }
+
+  .new-addition-img {
+    margin-right: 70px;
+  }
+
+  .clown-fish-img {
+    margin-left: 20px;
+  }
+
+  .fish-box-1 img {
+    -webkit-box-shadow: 28px 28px #86E0F9;
+            box-shadow: 28px 28px #86E0F9;
+  }
+
+  .fish-box-2 img {
+    -webkit-box-shadow: -28px 28px #86E0F9;
+            box-shadow: -28px 28px #86E0F9;
+  }
+
+  .month-profile-flex p {
+    padding: 15px 0 18px;
+  }
+
+  .month-profile-flex img {
+    width: 300px;
+    margin-right: 70px;
+  }
+}
+@media (max-width: 882px) {
+  header {
+    height: 70vh;
+  }
+
+  h1 {
+    font-size: 7rem;
+  }
+
+  .home-box-image img {
+    width: 520px;
+    height: 420px;
+  }
+
+  .home-ul li {
+    padding: 15px 15px 0;
+  }
+
+  .about-details {
+    text-align: center;
+    padding: 120px 70px 140px;
+  }
+
+  .fish-box-1 {
+    margin-bottom: 0px;
+  }
+
+  .new-addition img {
+    height: 250px;
+  }
+
+  .new-addition-img {
+    margin-right: 70px;
+  }
+
+  .fish-details-box {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    margin-right: 40px;
+  }
+
+  .clown-fish-img {
+    margin-left: 85px;
+  }
+
+  .clown-fish-details {
+    padding-top: 40px;
+    padding-right: 5px;
+    margin-left: 40px;
+  }
+
+  .fish-box-2 img {
+    bottom: -65px;
+  }
+
+  .month-profile-flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 80px 0;
+    text-align: center;
+  }
+
+  .month-profile-flex div:nth-of-type(1) {
+    padding-bottom: 70px;
+  }
+
+  .month-profile-flex img {
+    width: 350px;
+    margin-right: 0;
+  }
+}
+@media (max-width: 790px) {
+  header {
+    height: 65vh;
+  }
+
+  p {
+    padding: 13px 0;
+    line-height: 23px;
+    color: #fff;
+    font-size: 1.4rem;
+  }
+
+  h1 {
+    font-size: 6.3rem;
+  }
+
+  h2 {
+    font-size: 2.5rem;
+  }
+
+  h3,
+h4 {
+    font-size: 2rem;
+  }
+
+  h5 {
+    font-size: 2.4rem;
+  }
+
+  button {
+    padding: 5px 14px;
+    letter-spacing: 1px;
+    font-size: 1.3rem;
+    border: 1px solid #86e0f9;
+  }
+
+  .about-details {
+    padding: 130px 40px;
+  }
+
+  .home-box-image img {
+    width: 450px;
+    height: 400px;
+  }
+
+  .home-ul li {
+    padding: 15px 10px 0;
+  }
+
+  .new-addition-img {
+    margin-right: 30px;
+  }
+
+  .fish-details-box {
+    padding-top: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    margin-right: 10px;
+  }
+
+  .clown-fish-img {
+    margin-left: 0px;
+  }
+
+  .clown-fish-details {
+    padding-top: 50px;
+    padding-right: 55px;
+    margin-left: 10px;
+  }
+
+  .fish-box-1 img {
+    -webkit-box-shadow: 10px 15px 30px 1px #86E0F9;
+            box-shadow: 10px 15px 30px 1px #86E0F9;
+    top: 0;
+  }
+
+  .fish-box-2 img {
+    -webkit-box-shadow: -10px -15px 30px 1px #86E0F9;
+            box-shadow: -10px -15px 30px 1px #86E0F9;
+    bottom: -36px;
+  }
+
+  .contact-flex {
+    padding: 60px 0px;
+  }
+
+  .contact-container div:nth-of-type(1) {
+    margin-bottom: 30px;
+  }
+
+  .location h3::before,
+.community h3::before,
+.blog h3::before,
+.get-in-touch h3::before {
+    font-size: 1.7rem;
+  }
+
+  .contact p {
+    padding-left: 45px;
+  }
+
+  .gallery div:nth-of-type(2) {
+    margin: 0 20px;
+  }
+}
+@media (max-width: 718px) {
+  .fish-box-2 img {
+    -webkit-box-shadow: -10px -15px 30px 1px #86E0F9;
+            box-shadow: -10px -15px 30px 1px #86E0F9;
+  }
+
+  .clown-fish-img {
+    margin-left: 25px;
+  }
+
+  .clown-fish-details {
+    padding-top: 50px;
+    padding-right: 20px;
+    margin-left: 10px;
+  }
+
+  .gallery {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+
+  .gallery div:nth-of-type(2) {
+    margin: 20px 0px;
+  }
+}
+@media (max-width: 676px) {
+  header {
+    height: 55vh;
+  }
+
+  .home-ul {
+    display: none;
+  }
+
+  .banner-text {
+    height: 100%;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding-top: 40px;
+  }
+
+  h1 {
+    font-size: 5rem;
+    line-height: 50px;
+  }
+
+  .home-box-image img {
+    width: 400px;
+    height: 300px;
+  }
+
+  .home-ul li {
+    font-size: 1rem;
+  }
+
+  .about-details {
+    padding: 90px 30px;
+  }
+
+  .fish-box-1,
+.fish-box-2 {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .fish-box-1 p {
+    text-align: justify;
+  }
+
+  .fish-box-2 p {
+    text-align: justify;
+  }
+
+  .new-addition-calc {
+    width: 100%;
+  }
+
+  .fish-details-box {
+    padding: 60px 60px 30px;
+    margin: 0;
+    text-align: center;
+  }
+
+  .clown-fish-img {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    padding: 0;
+    margin: 0;
+  }
+
+  .clown-fish-details {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    padding: 90px 60px 65px;
+    margin: 0;
+    text-align: center;
+  }
+
+  .fish-box-1 img {
+    -webkit-box-shadow: 0px 10px 25px 1px #86E0F9;
+            box-shadow: 0px 10px 25px 1px #86E0F9;
+  }
+
+  .fish-box-2 img {
+    -webkit-box-shadow: 0px 10px 25px 1px #86E0F9;
+            box-shadow: 0px 10px 25px 1px #86E0F9;
+    bottom: -36px;
+  }
+}
+@media (max-width: 550px) {
+  .home-box-image img {
+    width: 330px;
+  }
+
+  .contact-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+
+  .location,
+.blog {
+    margin: 0px;
+  }
+
+  .month-profile-flex img {
+    width: 100%;
+    -webkit-box-shadow: 0px 10px 5px 1px #86E0F9;
+            box-shadow: 0px 10px 5px 1px #86E0F9;
+  }
+}
+@media (max-width: 450px) {
+  header {
+    height: 50vh;
+  }
+
+  .home-box-image img {
+    width: 270px;
+    height: 250px;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+}
+@media (max-width: 370px) {
+  header {
+    height: 40vh;
+  }
+
+  .home-box-image img {
+    width: 230px;
+    height: 220px;
+  }
+
+  .home-box-image {
+    position: absolute;
+    top: 100px;
+  }
+
+  h1 {
+    font-size: 3.5rem;
+    line-height: 40px;
+  }
 }
