--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -1,62 +1,84 @@
 // Home page styling:
 
-header {
-    background-image: linear-gradient(
+.homepage-header {
+  background-image: linear-gradient(
       rgba(11, 1, 1, 0.674),
       rgba(18, 8, 8, 0.236)
-    ), url(../../assets/header-image.jpg);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-    background-position: center;
-    height: 80vh;
+    ),
+    url(../../assets/header-image.jpg);
+//   background-repeat: no-repeat;
+//   background-size: 100% 100%;
+//   background-position: center;
+//   height: 80vh;
 }
 
-.home-ul {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.homepage-header,
+.contact-header {
+//   background-image: linear-gradient(
+//       rgba(11, 1, 1, 0.674),
+//       rgba(18, 8, 8, 0.236)
+//     ),
+//     url(../../assets/header-image.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  height: 80vh;
+}
 
-    font-family: $baseFont;
-    // padding-top: 15px;
+
+
+.home-ul {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-family: $baseFont;
 }
 
 .home-ul li {
-    padding: 15px 25px 0;
-    font-size: 1.2rem;
-    letter-spacing: 1px;
+  padding: 15px 25px 0;
+  font-size: 1.2rem;
+  letter-spacing: 1px;
 }
 
 .home-ul a:hover,
 .home-ul a:focus {
-    color: $shadow;
+  color: $shadow;
 }
 
 h1 {
-    color: $fontColor;
-    font-size: 8rem;
-    font-family: $baseFont;
-    text-transform: uppercase;
-    line-height: 75px;
+  //   color: $fontColor;
+  //   font-size: 8rem;
+  //   font-family: $baseFont;
+  //   text-transform: uppercase;
+  @include fontSize(8rem);
+  line-height: 75px;
 }
 
 .header-content {
-    display: flex;
-    height: 90%;
-    flex-direction: column;
+  display: flex;
+  height: 90%;
+  flex-direction: column;
 }
 
 .banner-text {
-    height: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+  height: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
+// --------------------------------------------
 
+// contact-header:
 
+.contact-header {
+  background-image: url(../../assets/contact-header.jpg);
+//   background-repeat: no-repeat;
+//   background-size: 100% 100%;
+//   background-position: center;
+//   height: 80vh;
+}
 
-
-
-
-
-
+.contact-banner h1 {
+  @include fontSize(4rem);
+}
