--- a/styles/sass/_media-query.scss
+++ b/styles/sass/_media-query.scss
@@ -1,4 +1,3 @@
-
 @media (max-width: 955px) {
   .home-box-image img {
     width: 550px;
@@ -35,7 +34,7 @@
 }
 
 @media (max-width: 882px) {
-  header {
+  .homepage-header {
     height: 70vh;
   }
 
@@ -108,7 +107,7 @@
 }
 
 @media (max-width: 790px) {
-  header {
+  .homepage-header {
     height: 65vh;
   }
 
@@ -235,11 +234,10 @@
   .gallery div:nth-of-type(2) {
     margin: 20px 0px;
   }
-
 }
 
 @media (max-width: 676px) {
-  header {
+  .homepage-header {
     height: 55vh;
   }
 
@@ -277,11 +275,11 @@
   }
 
   .fish-box-1 p {
-    text-align: justify;
+    text-align: unset;
   }
 
   .fish-box-2 p {
-    text-align: justify;
+    text-align: unset;
   }
 
   .new-addition-calc {
@@ -328,7 +326,11 @@
 
   .location,
   .blog {
-    margin: 0px;
+    margin-right: 0px;
+  }
+
+  .contact p {
+    padding-left: 50px;
   }
 
   .month-profile-flex img {
@@ -338,7 +340,7 @@
 }
 
 @media (max-width: 450px) {
-  header {
+  .homepage-header {
     height: 50vh;
   }
 
@@ -353,7 +355,7 @@
 }
 
 @media (max-width: 370px) {
-  header {
+  .homepage-header {
     height: 40vh;
   }
 
@@ -372,3 +374,14 @@
     line-height: 40px;
   }
 }
+
+@media (max-width: 300px) {
+  .home-box-image img {
+    width: 170px;
+    height: 220px;
+  }
+}
+
+// Home page media query ends here
+
+// -------------------------------
