--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,5 +1,4 @@
 
-
 @import "setup";
 @import "variable";
 @import "header";
@@ -41,7 +40,7 @@ img {
 
 p {
   padding: 15px 0;
-  text-align: justify;
+//   text-align: justify;
   line-height: 25px;
   color: $fontColor;
   font-size: 1.5rem;
@@ -69,6 +68,7 @@ h5 {
 
 .about {
   background-color: $primary;
+//   position: relative;
 }
 
 .home-box-image img {
