worked on contact page, changed few class  names of both home page and contact page, worked on styles

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -6,24 +6,17 @@
       rgba(18, 8, 8, 0.236)
     ),
     url(../../assets/header-image.jpg);
-  //   background-repeat: no-repeat;
-  //   background-size: 100% 100%;
-  //   background-position: center;
-  //   height: 80vh;
+
+  @include headerHeight(80vh);
 }
 
-.homepage-header,
-.contact-header {
-  //   background-image: linear-gradient(
-  //       rgba(11, 1, 1, 0.674),
-  //       rgba(18, 8, 8, 0.236)
-  //     ),
-  //     url(../../assets/header-image.jpg);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  background-position: center;
-  height: 80vh;
-}
+// .homepage-header,
+// .contact-page-header {
+//   background-repeat: no-repeat;
+//   background-size: 100% 100%;
+//   background-position: center;
+//   height: 80vh;
+// }
 
 .home-ul,
 .contact-ul {
@@ -71,36 +64,20 @@ h1 {
 
 // --------------------------------------------
 
-// contact-header:
+// contact-page-header:
 
-.contact-header {
+.contact-page-header {
   background-image: url(../../assets/contact-header.jpg);
   //   background-repeat: no-repeat;
   //   background-size: 100% 100%;
   //   background-position: center;
   //   height: 80vh;
+  @include headerHeight(65vh);
 }
 
 .contact-banner-text h1 {
-  @include fontSize(5rem);
+  @include fontSize(5.5rem);
   text-align: center;
   padding-top: 100px;
+  // padding-right: 60px;
 }
-
-// .contact-ul {
-//   display: flex;
-//   justify-content: flex-end;
-//   align-items: center;
-//   font-family: $baseFont;
-// }
-
-// .contact-ul li {
-//   padding: 15px 25px 0;
-//   font-size: 1.2rem;
-//   letter-spacing: 1px;
-// }
-
-// .contact-ul a:hover,
-// .contact-ul a:focus {
-//   color: $shadow;
-// }
