--- a/styles/sass/_contact-styles.scss
+++ b/styles/sass/_contact-styles.scss
@@ -1,57 +1,124 @@
-
-
-.contact-section {
-    background-color: $primary;
-    padding: 100px 0;
+.contact-page-section {
+  background-color: $primary;
+  padding: 100px 0;
 }
 
 .social-links ul {
-    margin-top: 0;
+  margin-top: 0;
+  padding-left: 0;
+  display: flex;
+
+  li {
+    padding: 0 10px;
+  }
+
+  :nth-of-type(1) {
     padding-left: 0;
-    display: flex;
-
-    li {
-        padding: 0 7px;
-    }
-
-    :nth-of-type(1) {
-        padding-left: 0;
-    }
-
+  }
 }
 
 .social-links i {
-    font-size: 15px;
-    padding-bottom: 10px;
+  font-size: 1.6rem;
+//   padding-bottom: 10px;
+transition: .2s linear;
+}
+
+.social-links i:hover,
+.social-links i:focus {
+    transform: scale(1.3);
 }
 
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 address p:nth-of-type(1) {
-    padding-bottom: 15px;
-    font-size: 1.5rem;
-    font-weight: bold;
+  padding: 15px 0;
+  font-size: 1.8rem;
+  font-weight: bold;
 }
 
 address p {
-    padding: 3px;
-    font-size: 1.2rem;
-    line-height: 15px;
+  padding: 3px;
+  font-size: 1.4rem;
+  line-height: 17px;
 }
 
-.contact-flex {
-    display: flex;
-    // width: 100%;
+.contact-page-flex {
+  display: flex;
+  // width: 100%;
+  position: relative;
 }
 
-.contact-box {
-    margin-right: 25px;
-    width: 18%;
+.contact-page-details-box {
+  margin-right: 25px;
+  width: 30%;
 }
 
-.form-area {
-    width: 78%;
+.contact-page-section .form-area {
+  width: 68%;
+  background-color: $secondary;
+  padding: 60px;
+  height: 450px;
+  box-shadow: -35px 35px $shadow;
+
+  position: absolute;
+  top: -300px;
+  right: 0;
 }
 
+.name-email {
+  display: flex;
+  // justify-content: space-between;
+  // width: 100%;
+}
+
+.name,
+.email {
+  width: 48%;
+  margin-bottom: 40px;
+}
+
+.name {
+  margin-right: 25px;
+}
+
+.message {
+  margin-bottom: 40px;
+}
+
+input,
+textarea {
+  padding: 15px 20px;
+  background-color: $secondary;
+  color: $fontColor;
+  font-size: 1.4rem;
+}
+
+input {
+  border: none;
+  width: 100%;
+  // padding: 10px;
+  // background-color: $secondary;
+  // color: $fontColor;
+  border-bottom: 2px solid $shadow;
+}
+
+textarea {
+  width: 100%;
+  height: 200px;
+  resize: none;
+  // padding: 10px;
+  // background-color: $secondary;
+  // color: $fontColor;
+  border: 2px solid $shadow;
+}
+
+.form-area button {
+  width: 100%;
+  text-transform: uppercase;
+  color: $fontColor;
+  background-color: $primary;
+  border: none;
+  font-size: 1.3rem;
+}
