--- a/styles/style.css
+++ b/styles/style.css
@@ -280,14 +280,10 @@ template {
 .homepage-header {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(11, 1, 1, 0.674)), to(rgba(18, 8, 8, 0.236))), url(../../assets/header-image.jpg);
   background-image: linear-gradient(rgba(11, 1, 1, 0.674), rgba(18, 8, 8, 0.236)), url(../../assets/header-image.jpg);
-}
-
-.homepage-header,
-.contact-header {
+  height: 80vh;
   background-repeat: no-repeat;
   background-size: 100% 100%;
   background-position: center;
-  height: 80vh;
 }
 
 .home-ul,
@@ -351,12 +347,16 @@ h1 {
           align-items: center;
 }
 
-.contact-header {
+.contact-page-header {
   background-image: url(../../assets/contact-header.jpg);
+  height: 65vh;
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
 }
 
 .contact-banner-text h1 {
-  font-size: 5rem;
+  font-size: 5.5rem;
   color: #fff;
   font-weight: bold;
   font-family: "Barlow", sans-serif;
@@ -365,7 +365,7 @@ h1 {
   padding-top: 100px;
 }
 
-.contact-section {
+.contact-page-section {
   background-color: #0c1423;
   padding: 100px 0;
 }
@@ -378,15 +378,22 @@ h1 {
   display: flex;
 }
 .social-links ul li {
-  padding: 0 7px;
+  padding: 0 10px;
 }
 .social-links ul :nth-of-type(1) {
   padding-left: 0;
 }
 
 .social-links i {
-  font-size: 15px;
-  padding-bottom: 10px;
+  font-size: 1.6rem;
+  -webkit-transition: 0.2s linear;
+  transition: 0.2s linear;
+}
+
+.social-links i:hover,
+.social-links i:focus {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 address {
@@ -394,30 +401,89 @@ address {
 }
 
 address p:nth-of-type(1) {
-  padding-bottom: 15px;
-  font-size: 1.5rem;
+  padding: 15px 0;
+  font-size: 1.8rem;
   font-weight: bold;
 }
 
 address p {
   padding: 3px;
-  font-size: 1.2rem;
-  line-height: 15px;
+  font-size: 1.4rem;
+  line-height: 17px;
 }
 
-.contact-flex {
+.contact-page-flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+}
+
+.contact-page-details-box {
+  margin-right: 25px;
+  width: 30%;
+}
+
+.contact-page-section .form-area {
+  width: 68%;
+  background-color: #0f614e;
+  padding: 60px;
+  height: 450px;
+  -webkit-box-shadow: -35px 35px #86e0f9;
+          box-shadow: -35px 35px #86e0f9;
+  position: absolute;
+  top: -300px;
+  right: 0;
+}
+
+.name-email {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.contact-box {
-  margin-right: 25px;
-  width: 18%;
+.name,
+.email {
+  width: 48%;
+  margin-bottom: 40px;
 }
 
-.form-area {
-  width: 78%;
+.name {
+  margin-right: 25px;
+}
+
+.message {
+  margin-bottom: 40px;
+}
+
+input,
+textarea {
+  padding: 15px 20px;
+  background-color: #0f614e;
+  color: #fff;
+  font-size: 1.4rem;
+}
+
+input {
+  border: none;
+  width: 100%;
+  border-bottom: 2px solid #86e0f9;
+}
+
+textarea {
+  width: 100%;
+  height: 200px;
+  resize: none;
+  border: 2px solid #86e0f9;
+}
+
+.form-area button {
+  width: 100%;
+  text-transform: uppercase;
+  color: #fff;
+  background-color: #0c1423;
+  border: none;
+  font-size: 1.3rem;
 }
 
 html {
@@ -1103,8 +1169,8 @@ h4 {
 
   .month-profile-flex img {
     width: 100%;
-    -webkit-box-shadow: 0px 10px 5px 1px #86e0f9;
-            box-shadow: 0px 10px 5px 1px #86e0f9;
+    -webkit-box-shadow: 5px 10px 5px 1px #86e0f9;
+            box-shadow: 5px 10px 5px 1px #86e0f9;
   }
 }
 @media (max-width: 450px) {
