--- a/styles/sass/_media-query.scss
+++ b/styles/sass/_media-query.scss
@@ -385,3 +385,92 @@
 // Home page media query ends here
 
 // -------------------------------
+
+// Contact-page media query:
+
+@media (max-width: 1050px) {
+  .contact-banner-text h1 {
+    text-align: end;
+  }
+}
+
+@media (max-width: 955px) {
+  .contact-ul li {
+    padding: 15px 18px;
+  }
+
+  .contact-banner-text h1 {
+    text-align: center;
+  }
+
+  .contact-page-flex {
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-bottom: 50px;
+  }
+
+  .contact-page-details-box {
+    order: 2;
+    width: 100%;
+    margin-right: 0;
+    margin-top: 300px;
+  }
+
+  .form-area {
+    order: 1;
+    width: 100%;
+    top: 0;
+    box-shadow: 0px 0px;
+    padding: 40px 60px;
+    height: 350px;
+  }
+
+  textarea {
+    height: 130px;
+  }
+}
+
+@media (max-width: 645px) {
+  .name-email {
+    flex-direction: column;
+  }
+
+  .name,
+  .email,
+  .message {
+    width: 100%;
+    margin:0 0 20px;
+  }
+
+  input,
+  textarea {
+    padding: 10px 15px;
+    background-color: $secondary;
+    color: $fontColor;
+    font-size: 1.4rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .contact-page-header {
+    @include headerHeight(45vh);
+  }
+
+  .form-area {
+    padding: 35px;
+  }
+
+}
+
+@media (max-width: 400px) {
+  .contact-ul li {
+    padding: 15px 12px;
+    font-size: 1.1rem;
+  }
+
+  .contact-banner-text h1 {
+    padding-top: 50px;
+    line-height: 55px;
+  }
+
+}
